; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_isp1760-hcd.c_priv_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_isp1760-hcd.c_priv_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_hcd = type { i64 }
%struct.isp1760_hcd = type { i32, i32, i32 }

@DEFAULT_I_TDPS = common dso_local global i32 0, align 4
@HC_HCCPARAMS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_hcd*)* @priv_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @priv_init(%struct.usb_hcd* %0) #0 {
  %2 = alloca %struct.usb_hcd*, align 8
  %3 = alloca %struct.isp1760_hcd*, align 8
  %4 = alloca i32, align 4
  store %struct.usb_hcd* %0, %struct.usb_hcd** %2, align 8
  %5 = load %struct.usb_hcd*, %struct.usb_hcd** %2, align 8
  %6 = call %struct.isp1760_hcd* @hcd_to_priv(%struct.usb_hcd* %5)
  store %struct.isp1760_hcd* %6, %struct.isp1760_hcd** %3, align 8
  %7 = load %struct.isp1760_hcd*, %struct.isp1760_hcd** %3, align 8
  %8 = getelementptr inbounds %struct.isp1760_hcd, %struct.isp1760_hcd* %7, i32 0, i32 2
  %9 = call i32 @spin_lock_init(i32* %8)
  %10 = load i32, i32* @DEFAULT_I_TDPS, align 4
  %11 = load %struct.isp1760_hcd*, %struct.isp1760_hcd** %3, align 8
  %12 = getelementptr inbounds %struct.isp1760_hcd, %struct.isp1760_hcd* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.usb_hcd*, %struct.usb_hcd** %2, align 8
  %14 = getelementptr inbounds %struct.usb_hcd, %struct.usb_hcd* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @HC_HCCPARAMS, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @isp1760_readl(i64 %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i64 @HCC_ISOC_CACHE(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %1
  %23 = load %struct.isp1760_hcd*, %struct.isp1760_hcd** %3, align 8
  %24 = getelementptr inbounds %struct.isp1760_hcd, %struct.isp1760_hcd* %23, i32 0, i32 0
  store i32 8, i32* %24, align 4
  br label %31

25:                                               ; preds = %1
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @HCC_ISOC_THRES(i32 %26)
  %28 = add nsw i32 2, %27
  %29 = load %struct.isp1760_hcd*, %struct.isp1760_hcd** %3, align 8
  %30 = getelementptr inbounds %struct.isp1760_hcd, %struct.isp1760_hcd* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  br label %31

31:                                               ; preds = %25, %22
  ret i32 0
}

declare dso_local %struct.isp1760_hcd* @hcd_to_priv(%struct.usb_hcd*) #1

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @isp1760_readl(i64) #1

declare dso_local i64 @HCC_ISOC_CACHE(i32) #1

declare dso_local i32 @HCC_ISOC_THRES(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
